@@ -28,6 +28,9 @@ Changes Since 0.4
 
   - Unquoted targets beginning with an underscore (``.. __target:
     URI``) are no longer accepted.
+  - Added support for multiple attributions in a physical block quote
+    (indented text block), dividing it into multiple logical block
+    quotes.
 
 * docutils/writers/html4css1/__init__.py:
 
